--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,61 @@ html {
   font-family: "PT Serif", serif;
   background-color: #c9b5ab;
 }
+
+h1, h2 {
+  font-size: 1.5rem;
+  font-family: "PT Sans", sans-serif;
+  color: #3f1622;
+  font-weight: bold;
+}
+
+p {
+  font-weight: normal;
+}
+
+a {
+  font-size: 1.125rem;
+  font-family: "PT Sans", sans-serif;
+  color: 8f2400;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  color: #3f1622;
+text-decoration: none;
+}
+
+blockquote {
+  font-size: 1.5rem;
+  color: #222;
+}
+
+figcaption {
+  font-style: italic;
+}
+
+img {
+  width: 100%
+}
+
+dt {
+  font-weight: bold;
+}
+
+cite:last-child {
+  font-size: .8rem;
+}
+
+ul {
+  list-style-type: lower-greek;
+}
+
+blockquote p {
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+
+.varities {
+  font-size: 8rem;
+}
