--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ p {
 a {
   font-size: 1.125rem;
   font-family: "PT Sans", sans-serif;
-  color: 8f2400;
+  color: #8f2400;
   text-decoration: none;
   font-weight: bold;
 }
