--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ p {
 a {
   font-size: 1.125rem;
   font-family: "PT Sans", sans-serif;
-  color: #8f2400;
+  color: #8f2440;
   text-decoration: none;
   font-weight: bold;
 }
@@ -59,5 +59,5 @@ blockquote p {
 }
 
 .varities {
-  font-size: 8rem;
+  font-size: .8rem;
 }
